[package]
name = "restaurant"
version = "0.0.1"
authors = ["JamisonHubbard <jhubbard956@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/bin.rs"

[dependencies]
